--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "chai": "^4.2.0",
-    "mocha": "^7.1.1"
+    "chai-spies": "^1.0.0",
+    "mocha": "^7.1.2"
   }
 }
